[package]
name = "reth-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", features = [
  "optimism",
] }
reth_provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
